--- a/LAB4_EX.ioc
+++ b/LAB4_EX.ioc
@@ -6,7 +6,8 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM2
-Mcu.IPNb=4
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA3
@@ -38,11 +39,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=RX
 PA10.Locked=true
-PA10.Signal=GPIO_Output
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=LED_RED
 PA3.Locked=true
@@ -67,10 +68,9 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=LED_PURPLE
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=TX
 PA9.Locked=true
-PA9.Signal=GPIO_Output
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=Button
 PB0.Locked=true
@@ -103,7 +103,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM2_Init-TIM2-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -114,6 +114,9 @@ RCC.TimSysFreq_Value=8000000
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=9
 TIM2.Prescaler=7999
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode,BaudRate
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
