--- a/LAB4_EX.ioc
+++ b/LAB4_EX.ioc
@@ -10,19 +10,38 @@ Mcu.IP4=USART1
 Mcu.IPNb=5
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA3
-Mcu.Pin1=PA4
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PA5
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PB0
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=VP_SYS_VS_ND
-Mcu.PinsNb=12
+Mcu.Pin0=PA1
+Mcu.Pin1=PA2
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
+Mcu.Pin2=PA3
+Mcu.Pin20=PA14
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_SYS_VS_ND
+Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin3=PA4
+Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -41,40 +60,64 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=LED_RED
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.Locked=true
+PA13.Signal=GPIO_Output
+PA14.Locked=true
+PA14.Signal=GPIO_Output
+PA2.Locked=true
+PA2.Signal=GPIO_Output
 PA3.Locked=true
 PA3.Signal=GPIO_Output
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=LED_YELLOW
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LED_GREEN
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=LED_BLUE
 PA6.Locked=true
-PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LED_WHITE
+PA6.Signal=GPIO_Input
 PA7.Locked=true
-PA7.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=LED_PURPLE
+PA7.Signal=GPIO_Input
 PA8.Locked=true
-PA8.Signal=GPIO_Output
+PA8.Signal=GPIO_Input
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=Button
 PB0.Locked=true
-PB0.Signal=GPIO_Input
+PB0.Signal=GPIO_Output
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -103,7 +146,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM2_Init-TIM2-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM2_Init-TIM2-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
